--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.10",
+    "axios": "^0.19.1",
     "core-js": "^3.4.4",
+    "echarts": "^4.6.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
@@ -21,9 +25,12 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^2.7.3",
+    "less-loader": "^5.0.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
